dataset1235/2025-2/805158916/users/3688932496/executions/3435325918_95297336.log
== SUBMISSION (2025-09-03 16:49:22)
-- CODE: 
escala = input("Escala:").upper()
temp_entrada = float(input("Informe o valor da temperatura:"))

if ( escala == 'C'):
    temp_saida = (9/5) * temp_entrada + 32
    print(round(temp_saida,2))
else:
    temp_saida = (5/9) * (temp_entrada - 32)
    print(round(temp_saida,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Escala:Informe o valor da temperatura:160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Escala:Informe o valor da temperatura:37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escala:Informe o valor da temperatura:608.0
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escala:Informe o valor da temperatura:608.0
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escala:Informe o valor da temperatura:32.0
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Escala:Informe o valor da temperatura:-1.11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:48:16)
-- CODE: 
escala = input("Escala:").upper()
temp_entrada = float(input("Informe o valor da temperatura:"))

if ( escala == 'C'):
    temp_saida = (9/5) * (temp_entrada + 32)
    print(round(temp_saida,2))
else:
    temp_saida = (5/9) * (temp_entrada - 32)
    print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Escala:Informe o valor da temperatura:160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Escala:Informe o valor da temperatura:37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Escala:Informe o valor da temperatura:633.6
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Escala:Informe o valor da temperatura:633.6
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Escala:Informe o valor da temperatura:57.6
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Escala:Informe o valor da temperatura:-1.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:28:23)
-- CODE: 
escala = input("Escala").upper()
temp_entrada = float(input("Informe o valor da temperatura:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
EscalaInforme o valor da temperatura:
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
EscalaInforme o valor da temperatura:
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
EscalaInforme o valor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
EscalaInforme o valor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
EscalaInforme o valor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
EscalaInforme o valor da temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:31:34)
-- CODE: 
escala = input("Informe a escala:").upper()
temp_entrada = float(input("Informe o valor da temperatura:"))
if (escala == "C"):
  temp_saida = (9/5) * (temp_entrada + 32)
else:
  temp_saida = (5/9) * (temp_entrada - 32)
  print(round(temp_saida,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
---- user output:
Informe a escala:Informe o valor da temperatura:160.0
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
---- user output:
Informe a escala:Informe o valor da temperatura:37.78
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
---- user output:
Informe a escala:Informe o valor da temperatura:
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
---- user output:
Informe a escala:Informe o valor da temperatura:
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
---- user output:
Informe a escala:Informe o valor da temperatura:
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
---- user output:
Informe a escala:Informe o valor da temperatura:-1.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:42:12)
-- CODE: 
escala = input("Escala:").upper()
temp_entrada = float(input("Informe o valor da temperatura:"))
print(round(temp_saida,2))

 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
F
320
---- correct output:
160.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(temp_saida,2))
                ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 2:
---- input:
F
100.0
---- correct output:
37.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(temp_saida,2))
                ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 3:
---- input:
C
320
---- correct output:
608.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(temp_saida,2))
                ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 4:
---- input:
C
320.0
---- correct output:
608.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(temp_saida,2))
                ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 5:
---- input:
C
0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(temp_saida,2))
                ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
-- TEST CASE 6:
---- input:
F
30.0
---- correct output:
-1.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(temp_saida,2))
                ^^^^^^^^^^
NameError: name 'temp_saida' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
